Bug fix to make privacy policy links visible.

--- a/less/main/theme.less
+++ b/less/main/theme.less
@@ -142,3 +142,14 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 		color: @color__footer--border;
 	}
 }
+
+.gdpr-footer {
+    background-color: @color__footer--background;
+    padding: 15px 0;
+    
+    a[class] {
+        padding: 0 10px;
+	    font-family: @font__navigation--font-family;
+		color: @color__footer--border;
+    }
+}
